fix portfolio buttons gap

--- a/css/main.css
+++ b/css/main.css
@@ -1203,6 +1203,11 @@ body {
   gap: 8px;
   margin-bottom: 40px;
 }
+@media screen and (min-width: 470px) and (max-width: 767px) {
+  .filter {
+    gap: 11 px;
+  }
+}
 @media screen and (min-width: 768px) {
   .filter {
     justify-content: center;
