--- a/sass/layouts/_portfolio.scss
+++ b/sass/layouts/_portfolio.scss
@@ -4,6 +4,10 @@
   gap: 8px;
   margin-bottom: 40px;
 
+  @media screen and (min-width: 470px) and (max-width: 767px) {
+    gap: 11 px;
+  }
+
   @media screen and (min-width: 768px) {
     justify-content: center;
     margin-bottom: 30px;
